--- a/BBM/home/templates/navbar.html
+++ b/BBM/home/templates/navbar.html
@@ -31,7 +31,12 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="{% url 'login' %}" class="btn btn-primary px-3 d-none d-lg-flex">Sign In</a>
+            {% if user.is_authenticated %} 
+                <p>{{user.username}}</p>
+                <a href="{% url 'logout' %}">Đăng xuất</a>
+            {%else%}
+                <a href="{% url 'login' %}" class="btn btn-primary px-3 d-none d-lg-flex">Sign In</a>
+            {%endif%}
         </div>
     </nav>
 </div>
