đăng nhập theo role

--- a/BBM/home/templates/master_page.html
+++ b/BBM/home/templates/master_page.html
@@ -53,6 +53,11 @@
        {%block search%}
        {%endblock%}
         <!-- Search End -->
+
+        <!-- Content Start -->
+       {%block content%}
+       {%endblock%}
+        <!-- Content End -->
         
         <!-- Footer Start -->
         {%block footer%}
