--- a/BBM/home/templates/navbar.html
+++ b/BBM/home/templates/navbar.html
@@ -5,7 +5,7 @@
             <div class="icon p-2 me-2">
                 <img class="img-fluid" src="{%static 'home/img/icon-deal.png' %}" alt="Icon" style="width: 30px; height: 30px;">
             </div>
-            <h1 class="m-0 text-primary">Makaan</h1>
+            <h1 class="m-0 text-primary">BBM</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
