--- a/BBM/home/templates/home/role1.html
+++ b/BBM/home/templates/home/role1.html
@@ -1,4 +1,5 @@
 {% extends "master_page.html" %}
+{% load static %}
 
 {%block search%}
     {%include '../search.html' %}
@@ -6,6 +7,32 @@
 
 {%block navbar%}
     {%include '../navbar.html' %}
+{%endblock%}
+
+{%block content%}
+<div class="row g-4">
+    {%for item in lc%}
+        <div class="col-lg-4 col-md-6 wow fadeInUp">
+            <div class="property-item rounded overflow-hidden">
+                <div class="position-relative overflow-hidden">
+                    <a href=""><img class="img-fluid" src="{%static 'home/img/property-2.jpg' %}" alt=""></a>
+                    <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Rent</div>
+                    <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Villa</div>
+                </div>
+                <div class="p-4 pb-0">
+                    <h5 class="text-primary mb-3">$12,345</h5>
+                    <a class="d-block h5 mb-2" href="">{{item.name}}</a>
+                    <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York, USA</p>
+                </div>
+                <div class="d-flex border-top">
+                    <small class="flex-fill text-center border-end py-2"><i class="fa fa-ruler-combined text-primary me-2"></i>1000 Sqft</small>
+                    <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed text-primary me-2"></i>3 Bed</small>
+                    <small class="flex-fill text-center py-2"><i class="fa fa-bath text-primary me-2"></i>2 Bath</small>
+                </div>
+            </div>
+        </div>
+    {%endfor%}
+</div>
 {%endblock%}
 
 {%block footer%}
