--- a/BBM/home/templates/category.html
+++ b/BBM/home/templates/category.html
@@ -9,7 +9,7 @@
                 <a class="cat-item d-block bg-light text-center rounded p-3" href="">
                     <div class="rounded p-4">
                         <div class="icon mb-3">
-                            <img class="img-fluid" src="{%static 'home/img/icon-apartment.png' %}" alt="Icon">
+                            <img class="img-fluid" src="{% static 'home/img/icon-chinhsach.png' %}" alt="Icon" style="width: 50px; height: auto;">
                         </div>
                         <h6>Chính sách huỷ dời minh bạch</h6>
                         <span>Cung cấp chính sách hủy hoặc
@@ -24,7 +24,7 @@
                 <a class="cat-item d-block bg-light text-center rounded p-3" href="">
                     <div class="rounded p-4">
                         <div class="icon mb-3">
-                            <img class="img-fluid" src="{%static 'home/img/icon-villa.png' %}" alt="Icon">
+                            <img class="img-fluid" src="{% static 'home/img/icon-datlich.png' %}" alt="Icon" style="width: 50px; height: auto;">
                         </div>
                         <h6>Đặt lịch linh hoạt, dễ dàng</h6>
                         <span>Bạn có thể đặt lịch chơi phù hợp tuỳ theo nhu cầu của bạn. Toàn bộ quy trình
@@ -37,7 +37,7 @@
                 <a class="cat-item d-block bg-light text-center rounded p-3" href="">
                     <div class="rounded p-4">
                         <div class="icon mb-3">
-                            <img class="img-fluid" src="{%static 'home/img/icon-house.png' %}" alt="Icon">
+                            <img class="img-fluid" src="{% static 'home/img/icon-timkiem.png' %}" alt="Icon" style="width: 50px; height: auto;">
                         </div>
                         <h6>Tìm kiếm sân dễ dàng</h6>
                         <span>Chỉ cần nhập vị trí sân, chúng tôi sẽ
@@ -53,7 +53,7 @@
                 <a class="cat-item d-block bg-light text-center rounded p-3" href="">
                     <div class="rounded p-4">
                         <div class="icon mb-3">
-                            <img class="img-fluid" src="{%static 'home/img/icon-housing.png' %}" alt="Icon">
+                            <img class="img-fluid" src="{% static 'home/img/icon-thongke.png' %}" alt="Icon" style="width: 50px; height: auto;">
                         </div>
                         <h6>Thống kê doanh thu</h6>
                         <span>Dành riêng cho chủ sân, tính
