--- a/BBM/home/templates/home/z.html
+++ b/BBM/home/templates/home/z.html
@@ -744,44 +744,46 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Our Clients Say!</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                    <h1 class="mb-3">TẠI SAO BẠN NÊN CHỌN CHÚNG TÔI</h1>
+                    <p>Badminton Booking Master được thành lập để giúp những người đam mê cầu lông dễ dàng tìm và đặt sân phù hợp.
+                        Chúng tôi cung cấp hệ thống đặt lịch thông minh, chính sách giá minh bạch, và dịch vụ hỗ trợ khách hàng tận tâm.</p>
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                     <div class="testimonial-item bg-light rounded p-3">
                         <div class="bg-white border rounded p-4">
-                            <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded" src="{%static 'home/img/testimonial-1.jpg' %}" style="width: 45px; height: 45px;">
                                 <div class="ps-3">
-                                    <h6 class="fw-bold mb-1">Client Name</h6>
-                                    <small>Profession</small>
+                                    <h5 class="fw-bold mb-1">UY TÍN</h5>
                                 </div>
                             </div>
+                            <p>Chúng tôi cam kết bảo mật tuyệt đối thông tin của khách hàng và giao
+                                dịch trực tuyến. Đã hơn 500 sân cầu lông trên toàn quốc hợp tác cùng
+                                với chúng tôi và chúng tôi đảm bảo rằng bạn sẽ nhận được sự phục vụ
+                                tốt nhất tại đây.</p>
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-3">
                         <div class="bg-white border rounded p-4">
-                            <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded" src="{%static 'home/img/testimonial-2.jpg' %}" style="width: 45px; height: 45px;">
                                 <div class="ps-3">
-                                    <h6 class="fw-bold mb-1">Client Name</h6>
-                                    <small>Profession</small>
+                                    <h5 class="fw-bold mb-1">TIỆN LỢI</h5>
                                 </div>
                             </div>
+                            <p>Với khả năng tối ưu hóa lịch đặt và gợi ý sân bằng công nghệ AI, bạn
+                                sẽ quản lý lịch một cách dễ dàng và tìm kiếm sân nhanh chóng. Đối
+                                với chủ sân, bạn sẽ có thêm tính năng quản lý doanh thu theo hàng
+                                tháng giúp bạn dễ dàng quản lý doanh thu của sân</p>
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-3">
                         <div class="bg-white border rounded p-4">
-                            <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid flex-shrink-0 rounded" src="{%static 'home/img/testimonial-3.jpg' %}" style="width: 45px; height: 45px;">
                                 <div class="ps-3">
-                                    <h6 class="fw-bold mb-1">Client Name</h6>
-                                    <small>Profession</small>
+                                    <h5 class="fw-bold mb-1">CHUYÊN NGHIỆP</h5>
                                 </div>
                             </div>
+                            <p>Chúng tôi có đội ngũ hỗ trợ luôn sẵn sàng giải đáp mọi thắc mắc của
+                                bạn 24/24.</p>
                         </div>
                     </div>
                 </div>
