--- a/BBM/home/templates/master_page.html
+++ b/BBM/home/templates/master_page.html
@@ -48,16 +48,17 @@
         {%block header%}
         {%endblock%}
         <!-- Header End -->
-
-        <!-- Search Start -->
-       {%block search%}
-       {%endblock%}
-        <!-- Search End -->
         
+        <!-- Content Start -->
+        {%block content%}
+        {%endblock%}
+        <!-- content End -->
+
         <!-- Footer Start -->
         {%block footer%}
         {%endblock%}
         <!-- Footer End -->
+
 
 
         <!-- Back to Top -->
