--- a/BBM/home/templates/navbar.html
+++ b/BBM/home/templates/navbar.html
@@ -2,38 +2,40 @@
 <div class="container-fluid nav-bar bg-transparent">
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
         <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
-            <div class="icon p-2 me-2">
-                <img class="img-fluid" src="{%static 'home/img/icon-deal.png' %}" alt="Icon" style="width: 30px; height: 30px;">
-            </div>
+            <!-- <div class="icon p-2 me-2">
+                <img class="img-fluid" src="{%static 'home/img/logo-1.png' %}" alt="Icon" style="width: 30px; height: 30px;">
+            </div> -->
             <h1 class="m-0 text-primary">BBM</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="container">
+                <div class="row g-2 align-items-center justify-content-center">
+                    <div class="col-md-8 col-lg-6">
+                        <input type="text" class="form-control border-0 py-2" placeholder="Search" 
+                            style="outline: none; box-shadow: none; background-color: rgb(244, 253, 245);">
+                    </div>
+                    <div class="col-md-4 col-lg-2">
+                        <button class="btn btn-dark border-0 w-100 py-2">Search</button>
+                    </div>
+                </div>
+            </div>
             <div class="navbar-nav ms-auto">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Property</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a href="property-list.html" class="dropdown-item">Property List</a>
-                        <a href="property-type.html" class="dropdown-item">Property Type</a>
-                        <a href="property-agent.html" class="dropdown-item">Property Agent</a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Error</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="index.html" class="nav-item nav-link active">Trang chủ</a>
             </div>
             {% if user.is_authenticated %} 
-                <p>{{user.username}}</p>
-                <a href="{% url 'logout' %}">Đăng xuất</a>
+                <div class="navbar-nav ms-auto"><div class="navbar-nav ms-auto">
+                    <a href="index.html" class="nav-item nav-link active">Lịch sử đặt sân</a>
+                </div>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">{{user.username}}</a>
+                    <div class="dropdown-menu rounded-0 m-0">
+                        <a href="{% url 'logout' %}" class="dropdown-item">Chi tiết thông tin</a>
+                        <a href="{% url 'logout' %}" class="dropdown-item">Đăng xuất</a>
+                    </div>
+                </div>
             {%else%}
                 <a href="{% url 'login' %}" class="btn btn-primary px-3 d-none d-lg-flex">Sign In</a>
             {%endif%}
