--- a/BBM/home/templates/home/role1.html
+++ b/BBM/home/templates/home/role1.html
@@ -15,9 +15,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp">
             <div class="property-item rounded overflow-hidden">
                 <div class="position-relative overflow-hidden">
-                    <a href=""><img class="img-fluid" src="{%static 'home/img/property-2.jpg' %}" alt=""></a>
-                    <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Rent</div>
-                    <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Villa</div>
+                    <a href=""><img class="img-fluid" style="height: 450px;" src="{{item.img}}" alt=""></a>
                 </div>
                 <div class="p-4 pb-0">
                     <h5 class="text-primary mb-3">$12,345</h5>
