--- a/BBM/home/templates/home/register.html
+++ b/BBM/home/templates/home/register.html
@@ -86,7 +86,9 @@
             </form>
             <p class="switch-text">Đã có tài khoản? <a href="{% url 'login' %}">Đăng nhập</a></p>
         </div>
-        <div class="image-section"></div>
+        <div class="image-section">
+            <img src="{% static 'home/img/trangdau.png' %}" alt="" height="70%" width="100%">
+        </div>
     </div>
 
     <script>
