cap nhat trang court-manager

--- a/home/templates/master.html
+++ b/home/templates/master.html
@@ -15,7 +15,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Web đặt sân cầu lông trực tuyến</title>
+    <title>Trang quản lý thông tin</title>
 
     <meta name="description" content="" />
 
