--- a/home/templates/includes/left-menu.html
+++ b/home/templates/includes/left-menu.html
@@ -51,7 +51,7 @@
             </g>
           </svg>
         </span>
-        <span class="app-brand-text demo menu-text fw-bold ms-2" style="color:forestgreen">BBM<span style="font-size: 0.6em;">admin</span></span>
+        <span class="app-brand-text demo menu-text fw-bold ms-2" style="color:forestgreen">BBM<span style="font-size: 0.6em;">manager</span></span>
       </a>
 
       <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
@@ -71,23 +71,23 @@
         </a>
         <ul class="menu-sub">
           <li class="menu-item active">
-            <a href="index.html" class="menu-link">
+            <a href="{% url 'court-manager' %}" class="menu-link">  
               <div class="text-truncate" data-i18n="Analytics">Thống kê</div>
             </a>
           </li>
           <li class="menu-item active">
-            <a href="index.html" class="menu-link">
+            <a href="{% url 'list-staff' %}"class="menu-link">
               <div class="text-truncate" data-i18n="ListStaff">Danh Sách Nhân Viên</div>
             </a>
           </li>
-          <li class="menu-item active">
-            <a href="index.html" class="menu-link">
+          <li class="menu-item active ">
+            <a href="{% url 'list-court' %}" class="menu-link">
               <div class="text-truncate" data-i18n="ListCourt">Danh sách sân</div>
             </a>
           </li>
           <li class="menu-item active">
             <a
-              href="index.html" class="menu-link">
+              href="{% url 'list-account' %}" class="menu-link">
               <div class="text-truncate" data-i18n="ListAccount">Danh sách tài khoản</div>
             </a>
           </li>
