--- a/BBM/home/templates/home/role1.html
+++ b/BBM/home/templates/home/role1.html
@@ -22,7 +22,7 @@
                     <a href=""><img class="img-fluid" style="height: 450px;" src="{{item.img}}" alt=""></a>
                 </div>
                 <div class="p-4 pb-0">
-                    <h5 class="text-primary mb-3">$12,345</h5>
+                    <h5 class="text-primary mb-3">{{item.price}}đ/h</h5>
                     <a class="d-block h5 mb-2" href="">{{item.name}}</a>
                     <p><i class="fa fa-map-marker-alt text-primary me-2"></i>{{item.address}}</p>
                 </div>
