--- a/BBM/home/templates/home/role1.html
+++ b/BBM/home/templates/home/role1.html
@@ -15,16 +15,16 @@
 
 {%block content%}
 <div class="row g-4">
-    {%for item in lc%}
+    {%for court in lc%}
         <div class="col-lg-4 col-md-6 wow fadeInUp">
-            <div class="property-item rounded overflow-hidden">
+            <div class="property-court rounded overflow-hidden">
                 <div class="position-relative overflow-hidden">
-                    <a href="{% url 'datsan' %}"><img class="img-fluid" style="height: 450px;" src="{{item.img}}" alt=""></a>
+                    <a href="{% url 'detail' court.maCourt %}"><img class="img-fluid" style="height: 450px;" src="{{court.img.url}}" alt=""></a>
                 </div>
                 <div class="p-4 pb-0">
-                    <h5 class="text-primary mb-3">{{item.price}}đ/h</h5>
-                    <a class="d-block h5 mb-2" href="{% url 'datsan' %}">{{item.name}}</a>
-                    <p><i class="fa fa-map-marker-alt text-primary me-2"></i>{{item.address}}</p>
+                    <h5 class="text-primary mb-3">{{court.price}}đ/h</h5>
+                    <a class="d-block h5 mb-2" href="{% url 'detail' court.maCourt %}">{{court.name}}</a>
+                    <p><i class="fa fa-map-marker-alt text-primary me-2"></i>{{court.address}}</p>
                 </div>
                 <div class="d-flex border-top">
                     <small class="flex-fill text-center border-end py-2"><i class="fa fa-ruler-combined text-primary me-2"></i>1000 Sqft</small>
